resizing more divs + fixing spacing issues with contact.js

--- a/src/Components/Info/Contact/Contact.css
+++ b/src/Components/Info/Contact/Contact.css
@@ -1,2 +1,27 @@
-.Contact {
+.contact div {
+    margin-bottom: 2.5%;
 }
+
+.links {
+    margin-top: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: space-between;
+    transform: scale(1.3);
+}
+
+.links a {
+    margin: 5px;
+    width: 40px;
+    height: 40px;
+}
+
+.links a:hover {
+    opacity: 0.5;
+}
+
+a {
+    color: #0275d8;
+    text-decoration: none;
+}
+
