--- a/src/Components/Info/Info.css
+++ b/src/Components/Info/Info.css
@@ -13,11 +13,11 @@
 
 .info-left {
   width: 33%; /* take up 50% of the container width */
-  padding: 10%; /* add some padding for spacing */
-  align-items: right;
+  margin: 10%; /* add some padding for spacing */
+  margin-right: 0%;
 }
 
 .info-right {
   width: 66%; /* take up 50% of the container width */
-  padding: 10%; /* add some padding for spacing */
+  margin: 10%; /* add some padding for spacing */
 }
